# Basic-Neural-Network

./: CMakeLists.txt  CONTRIBUTING.MD  README.md
inc/: ArgumentParser.hpp  NeuralNetwork.hpp  types.hpp
src/: ArgumentParser.cpp  NeuralNetwork.cpp  main.cpp
tests/: ArgumentParser_test.cpp  CMakeLists.txt
